- [ADD] is an addition of a new feature
- [FIX] is a bug fix
- [MAINT] is a maintenance change for general improvement and proactive avoidance of potential issues

WARNING: Until version `1.0.0` there is a greater possibility of breaking changes.

== `0.x` changes

=== `0.2.4` (in progress)

- [ADD] Utility middleware (formerly part of the microservices examples)
* `wrap-exception-event` adds an exception event to the server span.
This is intended for use by applications which transform the exception to an HTTP response in a subsequent middleware.
* `wrap-reitit-route` adds the matched Reitit route to the server span and request map.

=== `0.2.3` (2023-06-18)

- [ADD] Support for programmatic configuration of `MeterProvider` for metrics export.
- [ADD] Module `clj-otel-exporter-prometheus` for programmatic configuration of metrics export to Prometheus
- [FIX] `steffan-westcott.clj-otel.util/duration` should convert `[amount ^TimeUnit unit]` to `Duration`
- Bump deps:
* [MAINT] OpenTelemetry `1.27.0`
** [BREAK] The default value for autoconfiguration property `otel.logs.exporter` has changed from `none` to `otlp`
** [BREAK] Module `clj-otel-instrumentation-runtime-metrics` has been renamed and split into modules `clj-otel-instrumentation-runtime-telemetry-java8` and `clj-otel-instrumentation-runtime-telemetry-java17`
* [MAINT] gRPC `1.56.0`
* [MAINT] Pedestal `0.6.0`

=== `0.2.2` (2023-06-05)

- [ADD] Opt-in feature xref:doc/concepts.adoc#_bound_context[bound context], a Clojure dynamic var that overrides the default `context` or `parent` parameter value for `clj-otel` functions.
This feature is intended to simplify asynchronous code by eliminating explicit context passing.
Existing code that uses the current context or explicit context parameter values is unaffected.
- [FIX] Convert key names of entries added to OpenTelemetry attributes to snake_case.
This applies to resources, spans and metrics.